--- a/index.html
+++ b/index.html
@@ -39,14 +39,14 @@
               <h3 class="masthead-brand">ravi u sheth</h3>
               <nav>
                 <ul class="nav masthead-nav">
-                  <li class="active"><a href="#">Home</a></li>
+                  <li class="active"><a href="#">home</a></li>
                 </ul>
               </nav>
             </div>
           </div>
 
           <div class="inner cover">
-            <h1 class="cover-heading">nobody.</h1>
+            <h1 class="cover-heading">nobody</h1>
             <p class="lead">likes me.</p>
             <p class="lead">
               <a href="#" class="btn btn-lg btn-default">Learn more</a>
