--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             <h1 class="cover-heading">nobody</h1>
             <p class="lead">likes me.</p>
             <p class="lead">
-              <a href="#" class="btn btn-lg btn-default">Learn more</a>
+              <a href="http://en.wikipedia.org/wiki/Friend,_Nebraska#/media/File:Friend,_Nebraska_police_station_from_SW_1.JPG" class="btn btn-lg btn-default">Learn more</a>
             </p>
           </div>
           
