--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <![endif]-->
   </head>
   <body>
-    <h2> hi, this is ravi sheth, and this is my website. </h2>
+    <h2> hi, this is ravi sheth, and this is my website. i live in nyc and go to grad school at columbia university. i like bacteria, fungi, algae, cheese, wine, and weird animals. you can contact me at raviusheth at gmail dot com.</h2>
     <!-- Bootstrap core JavaScript
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
