make more sparkles

--- a/index.html
+++ b/index.html
@@ -19,6 +19,17 @@
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
 
+
+  </head>
+  <body>
+    <h1> hi, this is ravi, and this is my website. i live in nyc and go to grad school at columbia university. i like bacteria, fungi, algae, helvetica, coffee, cheese, wine, and funky organisms. you can contact me, if you'd like, at sheth dot u dot ravi at gmail dot com.<br><br><br><br><br><br><br><br><br><br><br><br></h1>
+    <!-- Bootstrap core JavaScript
+    ================================================== -->
+    <!-- Placed at the end of the document so the pages load faster -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
+    <script src="js/bootstrap.min.js"></script>
+    <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
+    <script src="js/ie10-viewport-bug-workaround.js"></script>
     <script type="text/javascript">
     // <![CDATA[
     var colour="random"; // in addition to "random" can be set to any valid colour eg "#f0f" or "red"
@@ -210,15 +221,5 @@
     }
     // ]]>
     </script>
-  </head>
-  <body>
-    <h2> hi, this is ravi, and this is my website. i live in nyc and go to grad school at columbia university. i like bacteria, fungi, algae, helvetica, coffee, cheese, wine, and funky organisms. you can contact me, if you'd like, at sheth dot u dot ravi at gmail dot com.</h2>
-    <!-- Bootstrap core JavaScript
-    ================================================== -->
-    <!-- Placed at the end of the document so the pages load faster -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
-    <script src="js/bootstrap.min.js"></script>
-    <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-    <script src="js/ie10-viewport-bug-workaround.js"></script>
   </body>
 </html>
