--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
   </head>
   <body>
-    <h1> hi, this is ravi, and this is my website. i live in nyc and go to grad school at columbia university. i like bacteria, fungi, algae, helvetica, coffee, cheese, wine, and funky organisms. you can contact me, if you'd like, at sheth dot u dot ravi at gmail dot com.<br><br><br><br><br><br><br><br><br><br><br><br></h1>
+    <h1> hi, this is ravi, this is my website. i live in nyc and go to grad school at columbia university. sheth dot u dot ravi at gmail dot com.<br><br><br><br><br><br><br><br><br><br><br><br></h1>
     <!-- Bootstrap core JavaScript
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
