--- a/index.html
+++ b/index.html
@@ -9,9 +9,8 @@
     <meta name="author" content="">
     <title>ravi</title>
     <!-- Bootstrap core CSS -->
-    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link href="css/bootstrap.css" rel="stylesheet">
     <!-- Custom styles for this template -->
-    <link href="cover.css" rel="stylesheet">
     <script src="js/ie-emulation-modes-warning.js"></script>
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
@@ -22,7 +21,14 @@
 
   </head>
   <body>
-    <h1> hi, this is ravi, this is my website. i live in nyc and go to grad school at columbia university. sheth dot u dot ravi at gmail dot com.<br><br><br><br><br><br><br><br><br><br><br><br></h1>
+    <h1>hi, this is ravi<br>i live in nyc and am a phd student at columbia university.<br>sheth dot u dot ravi at gmail dot com.<br><br>
+    
+    <a href="https://scholar.google.com/citations?user=iWQ1yIcAAAAJ">papers</a> <br>
+    <a href="https://twitter.com/raviusheth">twitter (pls dont follow me)</a> <br>
+    <a href="https://www.youtube.com/watch?v=FOiB3feNi9Y">burritos</a> <br>
+
+    <br><br><br><br><br><br><br><br><br><br><br></h1>
+
     <!-- Bootstrap core JavaScript
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
