--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
 
   </head>
   <body>
+    <div class="hidden-xs hidden-sm">
     <h1>hi, this is ravi.<br>i live in nyc and am a phd student at columbia university.<br>sheth dot u dot ravi at gmail dot com.<br><br>
     
     <a href="https://scholar.google.com/citations?user=iWQ1yIcAAAAJ">papers</a> <br>
@@ -28,6 +29,10 @@
     <a href="https://www.youtube.com/watch?v=FOiB3feNi9Y">burritos</a> <br>
     </h1>
     <iframe width="0%" height="0" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/157953816&amp;auto_play=true&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false&amp;visual=true"></iframe>
+    </div>
+    <div class="visible-xs visible-sm">
+    <h1>this website is only viewable on a computer :)</h1>
+    </div>
 
     <!-- Bootstrap core JavaScript
     ================================================== -->
