--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   </head>
   <body>
     <div class="hidden-xs hidden-sm">
-    <h1>hi, this is ravi.<br>i live in nyc and am a phd student at columbia university.<br>sheth dot u dot ravi at gmail dot com.<br><br>
+    <h1>hi, this is ravi.<br>i live in nyc.<br>i am a phd student at columbia university.<br>sheth dot u dot ravi at gmail dot com.<br><br>
     
     <a href="https://scholar.google.com/citations?user=iWQ1yIcAAAAJ">papers</a> <br>
     <a href="https://twitter.com/raviusheth">twitter (pls dont follow me)</a> <br>
