--- a/index.html
+++ b/index.html
@@ -27,6 +27,8 @@
     <a href="https://scholar.google.com/citations?user=iWQ1yIcAAAAJ">papers</a> <br>
     <a href="https://twitter.com/raviusheth">twitter (pls dont follow me)</a> <br>
     <a href="https://www.youtube.com/watch?v=FOiB3feNi9Y">burritos</a> <br>
+    <a href="https://www.youtube.com/watch?v=iEf-YSNB-aw">modeling</a> <br>
+    
     </h1>
     <iframe width="0%" height="0" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/157953816&amp;auto_play=true&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false&amp;visual=true"></iframe>
     </div>
