--- a/trace.html
+++ b/trace.html
@@ -21,23 +21,29 @@
 
   </head>
   <body>
+
     <div class="container-fluid">
-      <div class="col-sm-4">
-        <h2>hi, this is ravi.</h2>
-        <h2>i live in nyc.</h2>
-        <h2>i am a phd student @ columbia university.</h2>
-        <h2>i develop new molecular and cellular tools for understanding and engineering complex microbial ecoystems.</h2>
-        <h2>sheth dot u dot ravi at gmail dot com.</h2>
-        <h2><a href="https://scholar.google.com/citations?user=iWQ1yIcAAAAJ">google scholar</a></h2>
-        <h2><a href="press.html">press</a></h2>
-        
-      </div>
-      <div class="col-sm-3">
-        <h3><div class="bg-warning text-white"><a href="trace.html">engineering cells to record temporal signals</a></div></h3>
+      <div class="col-sm-6">
+        <h2><a href="index.html">home</a></h2>
         <img src="img/trace.svg">
       </div>
-        
+
+
+      <div class="col-sm-4">
+        <br><br> 
+        <h3><div class="bg-warning text-white"><a href="http://science.sciencemag.org/lookup/doi/10.1126/science.aao0958">multiplex recording of cellular events over time on CRISPR biological tape, sheth et. al, science, 2017</a></div></h3>
+        <img src="img/trace_conc.png" style='width:100%'>
+        <br><br> 
+        <img src="img/trace_animation.gif" style='width:100%'>
+      </div>
     </div>
+    <div class="container-fluid">
+      <div class="col-sm-10">
+        <p class="lead">
+          "Multiplex recording of cellular events over time on CRISPR biological tape" Sheth RU, Yim SS, Wu FL, Wang HH. Science, 2017 (First Release)
+        </p>
+      </div> 
+    </div> 
     <!-- Bootstrap core JavaScript
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
