--- a/press.html
+++ b/press.html
@@ -26,6 +26,7 @@
         <h2><a href="index.html">home</a></h2>
         <h2>columbia univ. '15-</h2>
         <h3>gates foundation</h3>
+        <h3><a href="https://systemsbiology.columbia.edu/news/the-gates-foundation-funds-the-wang-lab%E2%80%99s-efforts-in-global-health-study">the gates foundation funds the wang lab’s efforts in global health study [columbia systems biology news]</a></h3>
         <h3><a href="http://hertzfoundation.org/news/pressrelease/1477/The-Fannie-and-John-Hertz-Foundation-Expands-Global-Health-and-Development-Fellowship-with-New-Fellows/">the hertz foundation expands global health and development fellowship [hertz foundation]</a></h3>
         <h3><a href="https://www.zdnet.com/article/gates-foundation-taps-hertz-foundations-fellows-the-best-young-minds/">gates foundation taps hertz foundation's fellows [zdnet]</a></h3>
         <h3>temporal recording in arrays by crispr expansion (trace)</h3>
