--- a/press.html
+++ b/press.html
@@ -25,6 +25,8 @@
       <div class="col-sm-6">
         <h2><a href="index.html">home</a></h2>
         <h2>columbia univ. '15-</h2>
+        <h3>spatiotemporal profiling of microbiomes</h3>
+        <h3><a href="https://www.genomeweb.com/sequencing/columbia-u-researchers-develop-ngs-based-spatial-metagenomics-method">columbia u researchers develop ngs-based spatial metagenomics method [genomeweb]</a></h3>
         <h3>gates foundation</h3>
         <h3><a href="https://systemsbiology.columbia.edu/news/the-gates-foundation-funds-the-wang-lab%E2%80%99s-efforts-in-global-health-study">the gates foundation funds the wang lab’s efforts in global health study [columbia systems biology news]</a></h3>
         <h3><a href="http://hertzfoundation.org/news/pressrelease/1477/The-Fannie-and-John-Hertz-Foundation-Expands-Global-Health-and-Development-Fellowship-with-New-Fellows/">the hertz foundation expands global health and development fellowship [hertz foundation]</a></h3>
