--- a/press.html
+++ b/press.html
@@ -26,6 +26,7 @@
         <h2><a href="index.html">home</a></h2>
         <h2>columbia univ. '15-</h2>
         <h3>spatiotemporal profiling of microbiomes</h3>
+        <h3><a href="https://www.cuimc.columbia.edu/news/sampling-neighborhoods-gut-microbiome">sampling the neighborhoods of the gut microbiome [columbia news]</a></h3>
         <h3><a href="https://www.genomeweb.com/sequencing/columbia-u-researchers-develop-ngs-based-spatial-metagenomics-method">columbia u researchers develop ngs-based spatial metagenomics method [genomeweb]</a></h3>
         <h3>gates foundation</h3>
         <h3><a href="https://systemsbiology.columbia.edu/news/the-gates-foundation-funds-the-wang-lab%E2%80%99s-efforts-in-global-health-study">the gates foundation funds the wang lab’s efforts in global health study [columbia systems biology news]</a></h3>
