--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
         <h2>sheth dot u dot ravi at gmail dot com.</h2>
         <h2><a href="https://scholar.google.com/citations?user=iWQ1yIcAAAAJ">google scholar</a></h2>
         <h2><a href="press.html">press</a></h2>
+        <h3>'progress in science depends on new techniques, new discoveries and new ideas, probably in that order.' -sydney brenner</h3>
         
       </div>
       <div class="col-sm-3">
