--- a/press.html
+++ b/press.html
@@ -26,7 +26,7 @@
         <h2><a href="index.html">home</a></h2>
         <h2>columbia univ. '15-</h2>
         <h3>ecological dynamics of microbiomes</h3>
-        <h3><a href="https://www.cuimc.columbia.edu/news/dynamics-gut-bacteria-follow-ecological-laws">Dynamics of Gut Bacteria Follow Ecological Laws [columbia news]</a></h3>
+        <h3><a href="https://www.cuimc.columbia.edu/news/dynamics-gut-bacteria-follow-ecological-laws">dynamics of gut bacteria follow ecological laws [columbia news]</a></h3>
         <h3>spatiotemporal profiling of microbiomes</h3>
         <h3><a href="https://www.cuimc.columbia.edu/news/sampling-neighborhoods-gut-microbiome">sampling the neighborhoods of the gut microbiome [columbia news]</a></h3>
         <h3><a href="https://www.genomeweb.com/sequencing/columbia-u-researchers-develop-ngs-based-spatial-metagenomics-method">columbia u researchers develop ngs-based spatial metagenomics method [genomeweb]</a></h3>
